--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -53,3 +53,9 @@ rules:
   semi:
     - warn
     - never
+  no-unused-vars:
+    - error
+    - { varsIgnorePattern: ^_, argsIgnorePattern: ^_, vars: local }
+  '@typescript-eslint/no-unused-vars':
+    - warn
+    - { varsIgnorePattern: ^_, argsIgnorePattern: ^_, vars: local }
